WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188015
Crashing on some builds that don't have async NSSharingService API
https://bugs.webkit.org/show_bug.cgi?id=188015
Summary
Crashing on some builds that don't have async NSSharingService API
Tim Horton
Reported
2018-07-25 13:05:41 PDT
Crashing on some builds that don't have async NSSharingService API
Attachments
Patch
(2.24 KB, patch)
2018-07-25 13:06 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-07-25 13:06:07 PDT
Created
attachment 345775
[details]
Patch
WebKit Commit Bot
Comment 2
2018-07-25 13:56:19 PDT
Comment on
attachment 345775
[details]
Patch Clearing flags on attachment: 345775 Committed
r234213
: <
https://trac.webkit.org/changeset/234213
>
WebKit Commit Bot
Comment 3
2018-07-25 13:56:20 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-07-25 13:57:29 PDT
<
rdar://problem/42596918
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug