Crashing on some builds that don't have async NSSharingService API https://bugs.webkit.org/show_bug.cgi?id=188015 <rdar://problem/42593935>

Reviewed by Eric Carlson.

* UIProcess/mac/ServicesController.mm:
(WebKit::hasCompatibleServicesForItems):


Canonical link: https://commits.webkit.org/203179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234213 268f45cc-cd09-0410-ab3c-d52691b4dbfc